# tmux-sessionizer

./: .gitignore  Cargo.toml  README.md  deny.toml  flake.nix
src/: cli.rs  configs.rs  error.rs  lib.rs  main.rs  tmux.rs
