[package]
name = "tmux-sessionizer"
version = "0.1.1"
description = "open tmux sessions for repo projects"
readme = "README.md"
license = "MIT"
repository = "https://github.com/polarmutex/tmux-sessionizer"
keywords = ["tmux"]
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = "4"
git2 = { version = "0", features = ["vendored-openssl"] }
shellexpand = "2"
skim = "0"
