[package]
name = "tms"
version = "1.0.0"
description = "open tmux sessions for repo projects"
readme = "README.md"
license = "MIT"
repository = "https://github.com/polarmutex/tmux-sessionizer"
keywords = ["tmux"]
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["cargo", "derive"] }
clap_complete = { version = "4.5", features = ["unstable-dynamic"] }
config = { version = "0.14", default-features = false, features = ["toml"] }
dirs = "5.0"
error-stack = "0.5"
gix = "0.69"
serde = "1.0"
serde_derive = "1.0"
shellexpand = "3.1"
skim = "0.15"
toml = "0.8"
